--- a/index.html
+++ b/index.html
@@ -8,33 +8,34 @@
 </head>
 <body>
 
-    <div class="calculator-body">
-        <div class="calculator-screen">SCREEN</div>
+    <div id="calculatorBody">
+        <div id="calculatorScreen">SCREEN</div>
 
-        <div class="calculator-button-container">
+        <div id="calculatorButtonContainer">
 
             <div id="clear">C</div>
-            <div id="pos-neg">+/-</div>
-            <div id="percent">%</div>
-            <div id="divide">/</div>
+            <div id="delete">del</div>
+            <div class="operator" id="percent">%</div>
+            <div class="operator" id="divide">/</div>
 
-            <div id="seven">7</div>
-            <div id="eight">8</div>
-            <div id="nine">9</div>
-            <div id="multiply">*</div>
+            <div class="number" id="seven">7</div>
+            <div class="number" id="eight">8</div>
+            <div class="number" id="nine">9</div>
+            <div class="operator" id="multiply">*</div>
 
-            <div id="four">4</div>
-            <div id="five">5</div>
-            <div id="six">6</div>
-            <div id="subtract">-</div>
+            <div class="number" id="four">4</div>
+            <div class="number" id="five">5</div>
+            <div class="number" id="six">6</div>
+            <div class="operator" id="subtract">-</div>
 
-            <div id="one">1</div>
-            <div id="two">2</div>
-            <div id="three">3</div>
-            <div id="add">+</div>
+            <div class="number" id="one">1</div>
+            <div class="number" id="two">2</div>
+            <div class="number" id="three">3</div>
+            <div class="operator" id="add">+</div>
 
-            <div id="zero">0</div>
+            <div class="number" id="zero">0</div>
             <div id="decimal">.</div>
+            <div id="posNeg">+/-</div>
             <div id="equals">=</div>
 
         </div>
