Create function to store one of three values and write to screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <div id="calculatorBody">
-        <div id="calculatorScreen">SCREEN</div>
+
+        <div id="calculatorScreen">0</div>
 
         <div id="calculatorButtonContainer">
 
@@ -47,3 +48,13 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+<!-- const calcVals = {
+    a: null,
+    b: null,
+    op: null,
+    prevType: null,
+    prevVal: null,
+    ans: null,
+} -->
