Create max and mins approaching zero

--- a/index.html
+++ b/index.html
@@ -14,33 +14,35 @@
 
         <div id="calculatorButtonContainer">
 
-            <div id="clear">C</div>
-            <div id="delete">del</div>
-            <div class="operator" id="percent">%</div>
-            <div class="operator" id="divide">/</div>
+            <div id="c">C</div>
+            <div id="Backspace">del</div>
+            <div class="operator" id="%">%</div>
+            <div class="operator" id="/">/</div>
 
-            <div class="number" id="seven">7</div>
-            <div class="number" id="eight">8</div>
-            <div class="number" id="nine">9</div>
-            <div class="operator" id="multiply">*</div>
+            <div class="number" id="7">7</div>
+            <div class="number" id="8">8</div>
+            <div class="number" id="9">9</div>
+            <div class="operator" id="*">*</div>
 
-            <div class="number" id="four">4</div>
-            <div class="number" id="five">5</div>
-            <div class="number" id="six">6</div>
-            <div class="operator" id="subtract">-</div>
+            <div class="number" id="4">4</div>
+            <div class="number" id="5">5</div>
+            <div class="number" id="6">6</div>
+            <div class="operator" id="-">-</div>
 
-            <div class="number" id="one">1</div>
-            <div class="number" id="two">2</div>
-            <div class="number" id="three">3</div>
-            <div class="operator" id="add">+</div>
+            <div class="number" id="1">1</div>
+            <div class="number" id="2">2</div>
+            <div class="number" id="3">3</div>
+            <div class="operator" id="+">+</div>
 
-            <div class="number" id="zero">0</div>
-            <div id="decimal">.</div>
-            <div id="posNeg">+/-</div>
-            <div id="equals">=</div>
+            <div class="number" id="0">0</div>
+            <div id=".">.</div>
+            <div id="n">+/-</div>
+            <div id="Enter">=</div>
 
         </div>
     </div>
+
+    <p id="commandInfo">Click Me For Keyboard Commands</p>
 
 
 
