Create screen details using an unordered list and flexbox

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
     <div id="calculatorBody">
 
-        <div id="calculatorScreen">0</div>
+        <ul id="boxAroundScreen">
+            <li class="boxBumps">o</li>
+            <li id="calculatorScreen">0</li>
+            <li class="boxBumps">o</li>
+        </ul>
+
 
         <div id="extraInfo">
             <div id="companyAndSolar">
