--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 
                 <div class="number" id="4">4</div>
                 <div class="number" id="5">5</div>
-                <div class="number" id="6">6</div>
+                <div class="number" id="6">
+                    <p>6</p>
+                    <div class="bump"></div>
+                </div>
     
                 <div class="number" id="1">1</div>
                 <div class="number" id="2">2</div>
