Add Odin icon to bottom and changed TI-108 font

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div id="extraInfo">
             <div id="companyAndSolar">
                 <p id="companyName">ODIN INSTRUMENTS</p>
-                <ul id="solarPanel"> 
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul id="solarPanelContainer"> 
+                    <li class="solarPanel"></li>
+                    <li class="solarPanel"></li>
+                    <li class="solarPanel"></li>
+                    <li class="solarPanel"></li>
                 </ul>
             </div>
             <p id="modelName">TI-108</p>
@@ -113,13 +113,11 @@
                     <div class="bumpContainer"></div>
                 </div>
             </div>
-            
-
-            <!-- <div id="placeholder">p</div> -->
-            
-
 
         </div>
+
+        <img id="OdinCalcIcon" src="./images/OdinCalcIcon.svg" alt="OdinCalcIcon">
+
     </div>
 
     <p id="commandInfo">Click Me For Keyboard Commands</p>
