Change operator function to accept sqrt and x^y

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
             <div class="normalButtons">
 
-                <div class="redButton" id="x^y"><span>x<sup>y</sup></span>
+                <div class="redButton" id="^"><span>x<sup>y</sup></span>
                     <div class="bumpContainer"></div>
                 </div>
-                <div class="redButton" id="y sqrt(x)">&radic;
+                <div class="redButton" id="s">&radic;
                     <div class="bumpContainer"></div>
                 </div>
                 <div class="operator" id="%">%
