Add button toggle style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="redButton" id="s">&radic;
                     <div class="bumpContainer" id="s"></div>
                 </div>
-                <div class="operator" id="%">%
+                <div class="redButton" id="%">%
                     <div class="bumpContainer" id="%"></div>
                 </div>
     
@@ -110,7 +110,7 @@
                 <div class="operator" id="+">+
                     <div class="bumpContainer" id="+"></div>
                 </div>
-                <div class="redButton" id="Enter">=
+                <div class="operator" id="Enter">=
                     <div class="bumpContainer" id="Enter"></div>
                 </div>
             </div>
